k8s/despliegue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domain-soon-deployment
  namespace: openred
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domain-soon
  template:
    metadata:
      labels:
        app: domain-soon
    spec:
      imagePullSecrets:
      - name: github-registry-secret
      containers:
      - name: domain-soon
        image: ghcr.io/ynvyauneenovore/domain-soon:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: domain-soon-service
  namespace: openred
spec:
  selector:
    app: domain-soon
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
