k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domain-soon
  labels:
    app: domain-soon
spec:
  selector:
    app: domain-soon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
